# TraderAssist

./: package.json  pnpm-lock.yaml
src/: app.css  shortcuts.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/upload_function/: github.rs  local_upload.rs  mod.rs  yfinance.rs
src/db/: settingsDb.ts
src/lib/components/: Modal.svelte  PrimaryButton.svelte  ThemeToggle.svelte
src/lib/components/dashboard/: ChartPanel.svelte  MarketWatch.svelte  PlaybackControls.svelte  Resizer.svelte  Terminal.svelte  Toolbar.svelte  ToolbarButton.svelte
src/lib/components/modals/: IndicatorModal.svelte  NewChartModal.svelte  SettingsModal.svelte  ShapeModal.svelte
src/lib/components/modals/newChart/: GitHubTab.svelte  UploadTab.svelte  YFinanceTab.svelte
src/lib/components/settings/: AppearanceSettings.svelte  GeneralSettings.svelte  ShortcutsSettings.svelte  TradeSettings.svelte
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/dashboard/: +page.svelte
src/stores/: chartStore.ts  modalStore.ts  settingsStore.ts  shortcutsStore.ts  symbolsStore.ts
src/utils/: keyboardHandler.ts
